troca de docker para containerd

--- a/ansible-k8s/roles/change-hostname/tasks/main.yaml
+++ b/ansible-k8s/roles/change-hostname/tasks/main.yaml
@@ -8,3 +8,12 @@
     path: /etc/hosts
     regexp: "^127.0.1.1"
     line: "127.0.1.1 {{ hostname }}"
+
+- name: Configurar SELinux para desabilitado
+  selinux:
+    state: disabled
+
+- name: Reboot da maquina
+  reboot:
+    reboot_timeout: 300
+    test_command: whoami
