--- a/ansible-k8s/roles/install-k8s/defaults/main.yaml
+++ b/ansible-k8s/roles/install-k8s/defaults/main.yaml
@@ -3,13 +3,22 @@ pacote_remover: podman
 pacote_remover_podman_docker: podman-docker
 pacote_remover_runc: runc
 repo_docker: "dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo"
+containerd_pacotes: containerd
 docker_pacotes:
   - docker-ce
   - docker-ce-cli
-k8s_repo_url: "https://pkgs.k8s.io/core:/stable:/v1.31/rpm/"
-k8s_gpg_key: "https://pkgs.k8s.io/core:/stable:/v1.31/rpm/repodata/repomd.xml.key"
+k8s_repo_url: "https://pkgs.k8s.io/core:/stable:/v1.30/rpm/"
+k8s_gpg_key: "https://pkgs.k8s.io/core:/stable:/v1.30/rpm/repodata/repomd.xml.key"
 k8s_pacotes:
   - kubelet
   - kubeadm
   - kubectl
 iproute_pacote: iproute-tc
+k8s_modules:
+  - overlay
+  - br_netfilter
+
+k8s_sysctl_params:
+  net.bridge.bridge-nf-call-iptables: "1"
+  net.bridge.bridge-nf-call-ip6tables: "1"
+  net.ipv4.ip_forward: "1"
