--- a/ansible-k8s/roles/install-k8s/tasks/main.yaml
+++ b/ansible-k8s/roles/install-k8s/tasks/main.yaml
@@ -1,15 +1,15 @@
 ---
-- name: Limpar o cache do dnf
+- name: limpar o cache do dnf
   command: dnf clean all
 
-- name: Carregar modulos necessarios para Kubernetes
+- name: carregar modulos necessarios para Kubernetes
   ansible.builtin.modprobe:
     name: "{{ item }}"
     state: present
   loop: "{{ k8s_modules }}"
   become: true
 
-- name: Criar arquivo de configuracao para modulos
+- name: criar arquivo de configuracao para modulos
   ansible.builtin.copy:
     dest: /etc/modules-load.d/k8s.conf
     content: |
@@ -18,7 +18,7 @@
   become: true
   notify: Recarregar modulos
 
-- name: Definir parametros do sysctl
+- name: definir parametros do sysctl
   ansible.builtin.copy:
     dest: /etc/sysctl.d/k8s.conf
     content: |
@@ -27,7 +27,7 @@
       net.ipv4.ip_forward                 = 1
   become: true
 
-- name: Aplicar parametros do sysctl sem reiniciar
+- name: aplicar parametros do sysctl sem reiniciar
   ansible.builtin.sysctl:
     name: "{{ item.key }}"
     value: "{{ item.value }}"
@@ -36,60 +36,59 @@
   loop: "{{ k8s_sysctl_params | dict2items }}"
   become: true
 
-- name: Desativar swap
+- name: desativar swap
   command: swapoff -a
   ignore_errors: true
 
-- name: Desativar no fstab
+- name: desativar no fstab
   lineinfile:
     path: /etc/fstab
     regexp: '^.*swap.*'
     state: absent
 
-- name: Adicionar o repositorio Docker
+- name: adicionar o repositorio para containerd
   command: "{{ repo_docker }}"
   ignore_errors: yes
 
-- name: Instalar containerd 
+- name: instalar containerd 
   dnf:
     name: "{{ containerd_pacotes }}"
     state: present
     allowerasing: yes
 
-- name: Criar diretorio /etc/containerd
+- name: criar diretorio /etc/containerd
   ansible.builtin.file:
     path: /etc/containerd
     state: directory
     mode: '0755'
   become: true
 
-- name: Gerar configuracao em /etc/containerd/config.toml
+- name: gerar config em /etc/containerd/config.toml
   ansible.builtin.command:
     cmd: containerd config default
   register: containerd_config
   become: true
 
-- name: Escrever configuracao em /etc/containerd/config.toml
+- name: escrever configuracao em /etc/containerd/config.toml
   ansible.builtin.copy:
     dest: /etc/containerd/config.toml
     content: "{{ containerd_config.stdout }}"
   become: true
 
-- name: Modificar configuracao de SystemdCgroup 
+- name: alterar configuracao de SystemdCgroup 
   ansible.builtin.lineinfile:
     path: /etc/containerd/config.toml
     regexp: '^.*SystemdCgroup.*$'
     line: '            SystemdCgroup = true'
     backup: yes
-  become: true
 
-- name: Iniciar o servico do containerd 
+- name: iniciar o servico do containerd 
   systemd:
     name: containerd
     enabled: yes
     state: started
 
-- name: Criar repositório Kubernetes
+- name: criar repo Kubernetes
   copy:
     dest: /etc/yum.repos.d/kubernetes.repo
     content: |
@@ -103,17 +102,15 @@
     group: root
     mode: '0644'
 
+- name: dnf update
+  dnf:
+    name: "*"
+    state: latest
+
 - name: Instalar kubelet, kubeadm, kubectl
   dnf:
     name: "{{ k8s_pacotes }}"
     state: present
-
-- name: Instalar o pacote iproute-tc
-  dnf:
-    name: "{{ iproute_pacote }}"
-    state: present
-    update_cache: yes
-
 
 - name: Iniciar o servico do kubelet 
   systemd:
